--- a/Final_Project/README.me
+++ b/Final_Project/README.me
@@ -1,4 +1,5 @@
-Hello Mr. Han - Here is my final project
+Here is my final project for ICS4UV
+
 It is a base converter that can serve a purpose if you need to convert strings or numbers to and from 2 different bases, or just interests' sake
 
 ONE BIG HEADS UP - PLEASE DO NOT TRY TO INPUT A BASE THAT IS GREATER THAN 10 AS IT WILL GIVE BACK THE WRONG VALUES (it gets complicated doing conversions over base 10)
